fix(Learn): Gives the search bar a defined height to prevent it from overflowing on Retina devices.

--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -97,6 +97,7 @@ li.user-state-link > a:focus {
 .fcc_searchBar {
   flex-grow: 1;
   padding: 0 10px;
+  max-height: 33px;
 }
 
 .fcc_searchBar .ais-SearchBox-input,
